--- a/.gitignore
+++ b/.gitignore
@@ -114,3 +114,5 @@ app.*.symbols
 !**/ios/**/default.perspectivev3
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
 !/dev/ci/**/Gemfile.lock
+**/gradle.properties
+**/mapbox_access_token.xml
